--- a/NccsvConverter/NccsvConverter.ConsoleApp/NccsvConverter.ConsoleApp.csproj
+++ b/NccsvConverter/NccsvConverter.ConsoleApp/NccsvConverter.ConsoleApp.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NccsvConverter.MainProject\NccsvConverter.MainProject.csproj" />
+    <ProjectReference Include="..\NccsvConverter.NccsvParser\NccsvConverter.NccsvParser.csproj" />
+    <ProjectReference Include="..\NccsvConverter.NccsvSerializer\NccsvConverter.NccsvSerializer.csproj" />
   </ItemGroup>
 
 </Project>
