--- a/NccsvConverter/NccsvConverter.TestProject/NccsvConverter.TestProject.csproj
+++ b/NccsvConverter/NccsvConverter.TestProject/NccsvConverter.TestProject.csproj
@@ -31,7 +31,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NccsvConverter.MainProject\NccsvConverter.MainProject.csproj" />
+    <ProjectReference Include="..\NccsvConverter.NccsvParser\NccsvConverter.NccsvParser.csproj" />
+    <ProjectReference Include="..\NccsvConverter.NccsvSerializer\NccsvConverter.NccsvSerializer.csproj" />
   </ItemGroup>
 
 </Project>
